2012-09-23  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass-documentation):
	Fix quoting.

2012-09-22  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.20 released.

	* Makefile (DISTFILES): Include keyword-generation.sh.

	* gentoo-syntax.el (ebuild-mode-font-lock-keywords): Addition of
	keywords in the previous change had caused this variable to exceed
	the 32 kbyte size limit for regular expressions. Unfortunately,
	this is a hard limit in Emacs' C code, MAX_BUF_SIZE in regex.c,
	that cannot be increased.
	* keyword-generation.sh: Filter all function names starting with
	an underscore, in order to shorten the keywords list.
	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eapi5):
	New variable, functions that are new in EAPI 5.
	(ebuild-mode-keywords-functions-default): Add "default".
	(ebuild-mode-keywords-eclass-documentation): Add new keywords from
	eclass-to-manpage.awk.
	(ebuild-mode-keywords-boost-utils, ebuild-mode-keywords-chromium)
	(ebuild-mode-keywords-intel-sdp, ebuild-mode-keywords-l10n)
	(ebuild-mode-keywords-mozlinguas)
	(ebuild-mode-keywords-multiprocessing)
	(ebuild-mode-keywords-myspell-r2, ebuild-mode-keywords-oasis)
	(ebuild-mode-keywords-python-distutils-ng)
	(ebuild-mode-keywords-unpacker, ebuild-mode-keywords-vala)
	(ebuild-mode-keywords-vcs-snapshot)
	(ebuild-mode-keywords-vdr-plugin-2): New variables.
	(ebuild-mode-keywords-tla, ebuild-mode-keywords-vmware)
	(ebuild-mode-keywords-vmware-mod): Variables removed.
	(ebuild-mode-keywords-*): Regenerated from eclasses.

	* keyword-generation.sh: Drop dead or removed eclasses from
	obsolete list. Sort it alphabetically. Skip any eclass that is
	marked with a @DEAD token. Use the shell for parsing of eclasses'
	environment.
	(has): New function.
	(ECLASSDIR, OBSOLETE): New variables.

2012-04-10  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-syntax.texi: Small syntax fixes.
